apps/dev/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-management
  namespace: sofi
spec:
  ingressClassName: traefik
  rules:
    - host: dev2.sofi-platform.dk
      http:
        paths:
          - backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
            path: /rabbitmq
            pathType: Prefix
  tls:
    - hosts:
        - dev2.sofi-platform.dk
      secretName: dev2.sofi-platform.dk-tls
